Bug 305085 - Dolphin view always follows console CWD
Summary: Dolphin view always follows console CWD
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: terminal (other bugs)
Version First Reported In: 2.1
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 320093 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-13 13:56 UTC by karl.r.ernst
Modified: 2014-11-01 04:31 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description karl.r.ernst 2012-08-13 13:56:51 UTC
I noticed that starting in 4.9 dolphin changes its current viewed directory when opening a console and changing the CWD there. While this is a nice feature in theory, there are some programs that change the CWD while running (and chang it back after they finish) which annoys me kind of.
Some popular ones are e.g. rsync and git

random idea: maybe it's possible to wait till the program exitst and refresh the view then. That way "cd" and such would still change it, but those 2 programs mentioned wouldn't

Reproducible: Always

Steps to Reproduce:
1. open dolphin in a git repo's subfolder
2. hit F4 + git log
3. notice how view changes to git root dir
Comment 1 Frank Reininghaus 2012-08-23 05:51:11 UTC
Thanks for the bug report! I can confirm the bug, but I'm afraid it's probably very difficult to fix. We can't do anything on the Dolphin side.

I'm not sure either if there's an easy way to do something about it in Konsole. AFAIK, the Konsole part checks periodically what the current directory is and sends a signal when it has changed. I don't know if Konsole could do it only when there is no process like git running, i.e., only if the shell prompt is shown and waiting for user input?
Comment 2 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:22:28 UTC
Resetting assignee to default as per bug #305719
Comment 3 Frank Reininghaus 2013-05-22 06:08:03 UTC
*** Bug 320093 has been marked as a duplicate of this bug. ***
Comment 4 Arjun AK 2014-09-15 10:20:25 UTC
*** Bug 339009 has been marked as a duplicate of this bug. ***
Comment 5 Alexander Nestorov 2014-09-15 10:26:28 UTC
This actually breaks pretty much everything, from simple commands as "git status" (which changes the current directory) to some special case scenarios like the bug I reported here https://bugs.kde.org/show_bug.cgi?id=339009

This should either be labeled as *Critical* and fixed ASAP or disabled altogether with Konsole's integration and enabled once it has been fixed.
Comment 6 Arjun AK 2014-10-23 21:11:37 UTC
Patch to fix this: https://git.reviewboard.kde.org/r/120763/
Comment 7 Kurt Hindenburg 2014-11-01 04:31:23 UTC
Git commit f83fd33900e05875cb24951b475b67f10c873e23 by Kurt Hindenburg.
Committed on 01/11/2014 at 04:17.
Pushed by hindenburg into branch 'KDE/4.14'.

Signal currentDirectoryChanged only check session's background process.

Do not check foreground process to determine if current directory has
changed.  Fixes nasty bugs such as 'man ls' changes to man folder.

Thanks to Arjun AK arjunak234 gmail com

REVIEW: 120763
FIXED-IN: 4.14.3

M  +5    -4    src/Session.cpp

http://commits.kde.org/konsole/f83fd33900e05875cb24951b475b67f10c873e23