Signal currentDirectoryChanged only check session's background process.

Do not check foreground process to determine if current directory has
changed.  Fixes nasty bugs such as 'man ls' changes to man folder.

Thanks to Arjun AK arjunak234 gmail com

REVIEW: 120763
BUG: 305085
FIXED-IN: 4.14.3