src/Session.cpp
@@ -289,15 +289,15 @@ QString Session::currentWorkingDirectory()
 }
 ProcessInfo* Session::updateWorkingDirectory()
 {
-    ProcessInfo* process = getProcessInfo();
+    updateSessionProcessInfo();
 
-    const QString currentDir = process->validCurrentDir();
+    const QString currentDir = _sessionProcessInfo->validCurrentDir();
     if (currentDir != _currentWorkingDir) {
         _currentWorkingDir = currentDir;
         emit currentDirectoryChanged(_currentWorkingDir);
     }
 
-    return process;
+    return 0; // not used - for BIC in KDE 4.14.x
 }
 
 QList<TerminalDisplay*> Session::views() const
@@ -989,7 +989,8 @@ bool Session::isRemote()
 QString Session::getDynamicTitle()
 {
     // update current directory from process
-    ProcessInfo* process = updateWorkingDirectory();
+    updateWorkingDirectory();
+    ProcessInfo* process = getProcessInfo();
 
     // format tab titles using process info
     bool ok = false;
